--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 <!-- divs need to be BEFORE the script tags! -->
 <div id="app" class="container-fluid"> <!-- we want container-FLUID for full width! -->
 	<div class="container-fluid" id="navbar-container">
-		<nav class="navbar navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<a class="navbar-brand" href="#">Bendyboi <small>OKC STREETCAR MAP</small></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarItems">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item"><a class="nav-link" href="#">Current location</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">List stops</a></li>
+				</ul>
+
+			</div>
 		</nav>
 	</div>
 	<div class="row">
@@ -45,6 +55,11 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js"></script>
 <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
+<!-- bootstrap stuff -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- end bootstrap stuff -->
 <script src="stops.js"></script>
 <script src="eta.js"></script>
 <script src="app.js"></script>
