--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarItems">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item"><a class="nav-link" href="#">Current location</a></li>
+					<li class="nav-item"><a class="nav-link" href="#" v-on:click="toCurLocation">Current location</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">List stops</a></li>
 				</ul>
 
