--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
 			<div class="collapse navbar-collapse" id="navbarItems">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item"><a class="nav-link" href="#" v-on:click="toCurLocation">Current location</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">List stops</a></li>
+                    <li class="nav-item">
+                        <div class="dropdown show">
+                            <a class="btn btn-secondary dropdown-toggle" id="stopsDropdownLink" data-toggle="dropdown"
+                                                    aria-haspopup="true" aria-expanded="false" href="#">Go to stop...</a>
+                            <div class="dropdown-menu" aria-labelledby="stopsDropdownLink">
+                                <div v-for="s in stopsLayer.features">
+                                    <a class="dropdown-item" href="#" v-on:click="toPickedStop(s.id)">{{s.name}}</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
 				</ul>
 
 			</div>
