code cleanup in app.js. slight change to header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="app" class="container-fluid"> <!-- we want container-FLUID for full width! -->
 	<div class="container-fluid" id="navbar-container">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">Bendyboi <small>OKC STREETCAR MAP</small></a>
+			<a class="navbar-brand" href="#">Bendyboi <small>STREETCAR MAP</small></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
