Change displayed name

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Bendyboi</title>
+<title>OKC Streetcar Map, Live Tracking, Arrival Times</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css">
 <link rel="stylesheet" href="style.css">
@@ -11,7 +11,7 @@
 <div id="app" class="container-fluid"> <!-- we want container-FLUID for full width! -->
 	<div class="container-fluid" id="navbar-container">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">Bendyboi <small>STREETCAR MAP</small></a>
+			<a class="navbar-brand" href="#">OKC Streetcar <small>UNOFFICIAL</small></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
