--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
 <!-- end bootstrap stuff -->
 <script src="stops.js"></script>
 <script src="eta.js"></script>
-<script src="app.js" type="module"></script>
+<script src="app.js"></script>
 
 
 </body>
