Make some css changes; apparently the leaflet map is broken on some browsers if the map AND PARENT ELEMENTS are not set to 100%.

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 			</div>
 		</nav>
 	</div>
-	<div class="row">
+	<div class="row h-100">
 		<div class="col-12 col-sm-6 col-lg-8" id="map-panel">
 		<!-- map -->
 			<div id="map" class="map">
