--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
 			<div class="collapse navbar-collapse" id="navbarItems">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item"><a class="nav-link" href="#" v-on:click="toCurLocation">Current location</a></li>
-                    <li class="nav-item">
+                    <li class="nav-item" v-if="stopsLayer">
                         <div class="dropdown show">
                             <a class="btn btn-secondary dropdown-toggle" id="stopsDropdownLink" data-toggle="dropdown"
                                                     aria-haspopup="true" aria-expanded="false" href="#">Go to stop...</a>
                             <div class="dropdown-menu" aria-labelledby="stopsDropdownLink">
-                                <div v-for="s in layers[0].features">
-                                    <a class="dropdown-item" href="#" v-on:click="toPickedStop(s.id)">{{s.name}}</a>
+                                <div v-for="s in stopsLayer._layers">
+                                    <a class="dropdown-item" href="#" v-on:click="toPickedStop(s.feature.properties.stopId)">{{s.feature.properties.stopName}}</a>
                                 </div>
                             </div>
                         </div>
